fix border corner invinsible by adding overflow hidden

--- a/css/product.css
+++ b/css/product.css
@@ -30,6 +30,7 @@
   border-radius: 20px;
   margin-top: 48px;
   margin-bottom: 12px;
+  overflow: hidden;
 }
 
 .product-page__image {
